# Connect-4

./: .gitignore  CMakeLists.txt  README.md
Program/: main.cpp
Program/include/: Game.h  GameAI.h  GameBoard.h  Random.h
Program/source/: Game.cpp  GameAI.cpp  GameBoard.cpp
